outputs_20260330-050452-0411793b/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\src\gtm_tom_3_phase_inverter_pwm.c:16:
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/IfxGtm_Pwm.h:94:5: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
   94 |     IfxGtm_Pwm_ToutMap *pin; /* self-ref placeholder to avoid unused type warnings */
      |     ^~~~~~~~~~~~~~~~~~
      |     IfxGtm_Tom_ToutMap

In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/IfxGtm_Pwm.h:94:5: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
   94 |     IfxGtm_Pwm_ToutMap *pin; /* self-ref placeholder to avoid unused type warnings */
      |     ^~~~~~~~~~~~~~~~~~
      |     IfxGtm_Tom_ToutMap

C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:6:21: error: conflicting types for 'mock_IfxGtm_Pwm_init_callCount'; have 'unsigned int'
    6 | extern unsigned int mock_IfxGtm_Pwm_init_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:2:
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:240:16: note: previous declaration of 'mock_IfxGtm_Pwm_init_callCount' with type 'int'
  240 | extern int     mock_IfxGtm_Pwm_init_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:7:21: error: conflicting types for 'mock_IfxGtm_Pwm_initConfig_callCount'; have 'unsigned int'
    7 | extern unsigned int mock_IfxGtm_Pwm_initConfig_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:241:16: note: previous declaration of 'mock_IfxGtm_Pwm_initConfig_callCount' with type 'int'
  241 | extern int     mock_IfxGtm_Pwm_initConfig_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:8:21: error: conflicting types for 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount'; have 'unsigned int'
    8 | extern unsigned int mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:242:16: note: previous declaration of 'mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount' with type 'int'
  242 | extern int     mock_IfxGtm_Pwm_updateChannelsDutyImmediate_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:9:21: error: conflicting types for 'mock_IfxGtm_isEnabled_callCount'; have 'unsigned int'
    9 | extern unsigned int mock_IfxGtm_isEnabled_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:244:16: note: previous declaration of 'mock_IfxGtm_isEnabled_callCount' with type 'int'
  244 | extern int     mock_IfxGtm_isEnabled_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:10:21: error: conflicting types for 'mock_IfxGtm_enable_callCount'; have 'unsigned int'
   10 | extern unsigned int mock_IfxGtm_enable_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:247:16: note: previous declaration of 'mock_IfxGtm_enable_callCount' with type 'int'
  247 | extern int     mock_IfxGtm_enable_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:11:21: error: conflicting types for 'mock_IfxGtm_Cmu_getModuleFrequency_callCount'; have 'unsigned int'
   11 | extern unsigned int mock_IfxGtm_Cmu_getModuleFrequency_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:249:16: note: previous declaration of 'mock_IfxGtm_Cmu_getModuleFrequency_callCount' with type 'int'
  249 | extern int     mock_IfxGtm_Cmu_getModuleFrequency_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:12:21: error: conflicting types for 'mock_IfxGtm_Cmu_enableClocks_callCount'; have 'unsigned int'
   12 | extern unsigned int mock_IfxGtm_Cmu_enableClocks_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:252:16: note: previous declaration of 'mock_IfxGtm_Cmu_enableClocks_callCount' with type 'int'
  252 | extern int     mock_IfxGtm_Cmu_enableClocks_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:13:21: error: conflicting types for 'mock_IfxPort_togglePin_callCount'; have 'unsigned int'
   13 | extern unsigned int mock_IfxPort_togglePin_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:254:16: note: previous declaration of 'mock_IfxPort_togglePin_callCount' with type 'int'
  254 | extern int     mock_IfxPort_togglePin_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:15:21: error: conflicting types for 'mock_IfxPort_setPinModeOutput_callCount'; have 'unsigned int'
   15 | extern unsigned int mock_IfxPort_setPinModeOutput_callCount;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:257:16: note: previous declaration of 'mock_IfxPort_setPinModeOutput_callCount' with type 'int'
  257 | extern int     mock_IfxPort_setPinModeOutput_callCount;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:16:12: error: conflicting types for 'mock_IfxGtm_isEnabled_returnValue'; have 'int'
   16 | extern int mock_IfxGtm_isEnabled_returnValue;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:245:16: note: previous declaration of 'mock_IfxGtm_isEnabled_returnValue' with type 'boolean' {aka 'unsigned char'}
  245 | extern boolean mock_IfxGtm_isEnabled_returnValue;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\test\test_gtm_tom_3_phase_inverter_pwm.c:17:21: error: conflicting types for 'mock_IfxGtm_Cmu_getModuleFrequency_returnValue'; have 'unsigned int'
   17 | extern unsigned int mock_IfxGtm_Cmu_getModuleFrequency_returnValue;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t2ub3yhb\include/mock_gtm_tom_3_phase_inverter_pwm.h:250:16: note: previous declaration of 'mock_IfxGtm_Cmu_getModuleFrequency_returnValue' with type 'float32' {aka 'float'}
  250 | extern float32 mock_IfxGtm_Cmu_getModuleFrequency_returnValue;
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
